# tauri-plugin-fanto

./: Cargo.toml  README.md  package.json
.changes/: config.json  initial-release.md  readme.md
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/src/: lib.rs
permissions/schemas/: schema.json
src/: desktop.rs  error.rs  lib.rs  mobile.rs
webview-src/: index.ts
