[package]
name = "tauri-plugin-fanto"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-fanto"

[dependencies]
tauri = { version = "2.0.0-beta.6" }
serde = "1.0"
thiserror = "1.0"
webdriver-downloader = { version = "0.14.3", default-features = false, features = ["native-tls"] }

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.4", features = ["build"] }
