[package]
name = "tauri-plugin-fanto"
version = "0.1.0"
authors = [ "seongs1024" ]
description = "tauri plugin fantoccini integrated with webdriver-downloader"
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-fanto"

[dependencies]
tauri = { version = "2.0.0-beta.6" }
serde = "1.0"
thiserror = "1.0"
webdriver-downloader = { version = "0.14.3", default-features = false, features = ["native-tls"] }
fantoccini = { version = "0.19.3", default-features = false, features = ["native-tls"] }
serde_json = { version = "1.0.114", default-features = false }

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.4", features = ["build"] }

[target.'cfg(windows)'.dependencies]
reqwest = { version = "0.11.24", default-features = false, features = ["native-tls"] }
zip = { version = "0.6.6", default-features = false }
